--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,10 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
