--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:cardview-v7:22.0.0'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
     compile 'com.squareup.picasso:picasso:2.5.2'
 }
