--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.0.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'jp.wasabeef:recyclerview-animators:1.2.0@aar'
+    compile group: 'com.google.guava', name: 'guava', version: '18.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.afollestad:material-dialogs:0.7.2.8'
 }
